[package]
name = "mev-template-alloy"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.2.1", features = ["full"] }
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
reqwest = "0.11.10"
url = "2.5.2"
eyre = "0.6.12"
futures-util = "0.3.30"
